5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1618_2923.log
== TEST (2019-04-02 10:13:07) 
-- CODE:
q0 =1500.0
t =36
qf = q0*(1 + j)**(t) 
print(qf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    qf = q0*(1 + j)**(t) 
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:15:24) 
-- CODE:
q0 =1500.0
t =36
j float(input("juros:"))
qf = q0*(1 + j)**(t) 
print(qf)
-- ERROR:
File "XXXX", line 3
    j float(input())
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:15:40) 
-- CODE:
q0 =1500.0
t =36
j =float(input("juros:"))
qf = q0*(1 + j)**(t) 
print(qf)
-- OUTPUT:
14365502.75713173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:16:15) 
-- CODE:
q0 =1500.0
t =36
j =float(input("juros:"))
qf = q0*(1 + j)**(t) 
print(round(qf, 2))
-- OUTPUT:
14365502.76
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:16:28) 
-- CODE:
q0 =1500.0
t =36
j =float(input("juros:"))
qf = q0*(1 + j)**(t) 
print(round(qf, 2))
-- EXECUTION TIME:
0.120356
-- TEST CASE 1:
---- input:
0.29
---- correct output:
14365502.76
---- user output:
14365502.76
-- TEST CASE 2:
---- input:
0.095
---- correct output:
39354.97
---- user output:
39354.97
-- TEST CASE 3:
---- input:
0.134
---- correct output:
138727.07
---- user output:
138727.07
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
